DTSAM-521 ST_CIC_WA judicial mappings update