@@ -11,7 +11,6 @@ import uk.gov.hmcts.reform.orgrolemapping.helper.TestDataBuilder;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -27,28 +26,33 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
     //=================================SALARIED ROLES==================================
     @ParameterizedTest
     @CsvSource({
-        "President of Tribunal,Salaried,BBA2,N,'senior-judge,judge,case-allocator,task-supervisor,"
+        "President of Tribunal,BBA2,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "President of Tribunal,Salaried,BBA2,Y,'senior-judge,judge,case-allocator,task-supervisor,"
+        "Principal Judge,BBA2,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Principal Judge,Salaried,BBA2,N,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
-                + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Principal Judge,Salaried,BBA2,Y,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
-                + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "Tribunal Judge,Salaried,BBA2,N,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+        "Tribunal Judge,BBA2,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
                 + "specific-access-approver-judiciary'",
-        "Tribunal Judge,Salaried,BBA2,Y,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+        "Judge of the First-tier Tribunal,BBA2,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
                 + "specific-access-approver-judiciary'",
-        "Tribunal Member Medical,Salaried,BBA2,N,'medical,hmcts-judiciary'",
-        "Tribunal Member Medical,Salaried,BBA2,Y,'medical,hmcts-judiciary'",
+        "Circuit Judge,BBA2,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+                + "specific-access-approver-judiciary'",
+        "Regional Tribunal Judge,BBA2,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+                + "specific-access-approver-judiciary'",
+        "Tribunal Member Medical,BBA2,'medical,hmcts-judiciary'"
     })
+    void verifySalariedAndSptwRoles(String appointment, String serviceCode, String expectedRoles) {
+        shouldReturnSalariedRoles(appointment, "Salaried", serviceCode, "N", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "Salaried", serviceCode, "Y", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "SPTW", serviceCode, "N", expectedRoles);
+        shouldReturnSalariedRoles(appointment, "SPTW", serviceCode, "Y", expectedRoles);
+    }
+
     void shouldReturnSalariedRoles(String appointment, String appointmentType,
-                                  String serviceCode, String endDateNull, String expectedRoles) {
+                                   String serviceCode, String endDateNull, String expectedRoles) {
 
         judicialAccessProfiles.forEach(judicialAccessProfile -> {
             judicialAccessProfile.setAppointment(appointment);
             judicialAccessProfile.setAppointmentType(appointmentType);
-            judicialAccessProfile.setBaseLocationId("1032");
             judicialAccessProfile.getAuthorisations().forEach(a -> a.setServiceCodes(List.of(serviceCode)));
             if (endDateNull.equals("Y")) {
                 judicialAccessProfile.getAuthorisations().forEach(a -> a.setEndDate(null));
@@ -63,7 +67,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
 
         roleAssignments.forEach(r -> {
@@ -83,26 +87,32 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
     //=================================FEE-PAID ROLES==================================
     @ParameterizedTest
     @CsvSource({
-        "Tribunal Judge,Fee Paid,BBA2,N,'fee-paid-judge,hmcts-judiciary'",
-        "Tribunal Judge,Fee Paid,BBA2,Y,'fee-paid-judge,hmcts-judiciary'",
-        "Tribunal Member,Fee Paid,BBA2,N,'fee-paid-tribunal-member'",
-        "Tribunal Member,Fee Paid,BBA2,Y,'fee-paid-tribunal-member'",
-        "Tribunal Member Medical,Fee Paid,BBA2,N,'fee-paid-medical'",
-        "Tribunal Member Medical,Fee Paid,BBA2,Y,'fee-paid-medical'",
-        "Tribunal Member Lay,Fee Paid,BBA2,N,'fee-paid-tribunal-member'",
-        "Tribunal Member Lay,Fee Paid,BBA2,Y,'fee-paid-tribunal-member'",
-        "Tribunal Member Disability,Fee Paid,BBA2,N,'fee-paid-disability'",
-        "Tribunal Member Disability,Fee Paid,BBA2,Y,'fee-paid-disability'",
-        "Tribunal Member Financially Qualified,Fee Paid,BBA2,N,'fee-paid-financial'",
-        "Tribunal Member Financially Qualified,Fee Paid,BBA2,Y,'fee-paid-financial'",
+        "Tribunal Judge,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Judge of the First-tier Tribunal (sitting in retirement),BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Chairman,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Recorder,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Deputy Upper Tribunal Judge,BBA2,'fee-paid-judge,hmcts-judiciary'",
+        "Tribunal Member,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Lay,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Advisory Committee Member - Magistrate,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Magistrate,BBA2,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Medical,BBA2,'fee-paid-medical,hmcts-judiciary'",
+        "Tribunal Member Optometrist,BBA2,'fee-paid-medical,hmcts-judiciary'",
+        "Tribunal Member Disability,BBA2,'fee-paid-disability,fee-paid-tribunal-member,hmcts-judiciary'",
+        "Member of the First-tier Tribunal (sitting in retirement),BBA2,'fee-paid-disability,"
+                + "fee-paid-tribunal-member,hmcts-judiciary'",
+        "Tribunal Member Financially Qualified,BBA2,'fee-paid-financial,hmcts-judiciary'"
     })
-    void shouldReturnFeePaidRoles(String appointment, String appointmentType,
-                                  String serviceCode,String endDateNull, String expectedRoles) {
+    void verifyFeePaidRoles(String appointment, String serviceCode, String expectedRoles) {
+        shouldReturnFeePaidRoles(appointment, serviceCode, "N", expectedRoles);
+        shouldReturnFeePaidRoles(appointment, serviceCode, "Y", expectedRoles);
+    }
+
+    void shouldReturnFeePaidRoles(String appointment, String serviceCode, String endDateNull, String expectedRoles) {
 
         judicialAccessProfiles.forEach(judicialAccessProfile -> {
             judicialAccessProfile.setAppointment(appointment);
-            judicialAccessProfile.setAppointmentType(appointmentType);
-            judicialAccessProfile.setBaseLocationId("1032");
+            judicialAccessProfile.setAppointmentType("Fee Paid");
             judicialAccessProfile.setTicketCodes(List.of("376"));
             judicialAccessProfile.getAuthorisations().forEach(a -> {
                 a.setServiceCodes(List.of(serviceCode));
@@ -141,6 +151,9 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
         "President of Tribunal",
         "Principal Judge",
         "Tribunal Judge",
+        "Judge of the First-tier Tribunal",
+        "Circuit Judge",
+        "Regional Tribunal Judge",
         "Tribunal Member Medical"
     })
     void shouldNotReturnSalariedRolesExpiredEndDate(String appointment) {
@@ -156,7 +169,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
@@ -166,10 +179,18 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
     @ParameterizedTest
     @CsvSource({
         "Tribunal Judge",
+        "Judge of the First-tier Tribunal (sitting in retirement)",
+        "Chairman",
+        "Recorder",
+        "Deputy Upper Tribunal Judge",
         "Tribunal Member",
-        "Tribunal Member Medical",
         "Tribunal Member Lay",
+        "Advisory Committee Member - Magistrate",
+        "Magistrate",
+        "Tribunal Member Medical",
+        "Tribunal Member Optometrist",
         "Tribunal Member Disability",
+        "Member of the First-tier Tribunal (sitting in retirement)",
         "Tribunal Member Financially Qualified"
     })
     void shouldNotReturnFeePaidRolesExpiredEndDate(String appointment) {
@@ -185,7 +206,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
@@ -197,6 +218,9 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
         "President of Tribunal",
         "Principal Judge",
         "Tribunal Judge",
+        "Judge of the First-tier Tribunal",
+        "Circuit Judge",
+        "Regional Tribunal Judge",
         "Tribunal Member Medical"
     })
     void shouldNotReturnSalariedRolesWrongServiceCode(String appointment) {
@@ -212,7 +236,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
@@ -222,10 +246,18 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
     @ParameterizedTest
     @CsvSource({
         "Tribunal Judge",
+        "Judge of the First-tier Tribunal (sitting in retirement)",
+        "Chairman",
+        "Recorder",
+        "Deputy Upper Tribunal Judge",
         "Tribunal Member",
-        "Tribunal Member Medical",
         "Tribunal Member Lay",
+        "Advisory Committee Member - Magistrate",
+        "Magistrate",
+        "Tribunal Member Medical",
+        "Tribunal Member Optometrist",
         "Tribunal Member Disability",
+        "Member of the First-tier Tribunal (sitting in retirement)",
         "Tribunal Member Financially Qualified"
     })
     void shouldNotReturnFeePaidRolesWrongServiceCode(String appointment) {
@@ -241,58 +273,7 @@ class DroolStcicJudicialOfficeMappingTest extends DroolBase {
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //wrong base location(1032) and valid authorisation(servicecode) and valid appointment
-    @ParameterizedTest
-    @CsvSource({
-        "Tribunal Member Medical",
-    })
-    void shouldNotReturnSalariedRolesWrongBaseLocation(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Salaried");
-        profile.setBaseLocationId("999999");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("BBA2"))
-                        .build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
-
-        //assertion
-        assertTrue(roleAssignments.isEmpty());
-    }
-
-    //wrong base location(1032) and valid authorisation(servicecode) and valid appointment
-    @ParameterizedTest
-    @CsvSource({
-        "Tribunal Member Lay",
-        "Tribunal Member Medical",
-        "Tribunal Member Disability",
-        "Tribunal Member Financially Qualified",
-    })
-    void shouldNotReturnFeePaidRolesWrongBaseLocation(String appointment) {
-
-        JudicialAccessProfile profile = TestDataBuilder.buildJudicialAccessProfile();
-        profile.setAppointment(appointment);
-        profile.setAppointmentType("Fee Paid");
-        profile.setBaseLocationId("999999");
-        judicialAccessProfiles.add(profile);
-        judicialAccessProfiles.forEach(profiles -> profiles.setAuthorisations(
-                List.of(Authorisation.builder().serviceCodes(List.of("BBA2"))
-                        .build())));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_1_0", true));
+                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
 
         //assertion
         assertTrue(roleAssignments.isEmpty());
