@@ -19,7 +19,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -29,11 +28,11 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @RunWith(MockitoJUnitRunner.class)
-public class DroolStcicJudicialRoleMappingTest extends DroolBase {
+class DroolStcicJudicialRoleMappingTest extends DroolBase {
 
     static Map<String, String> expectedRoleNameWorkTypesMap = new HashMap<>();
 
-    {
+    static {
         expectedRoleNameWorkTypesMap.put("senior-judge", null);
         expectedRoleNameWorkTypesMap.put("judge", "hearing_work,decision_making_work,routine_work,"
                 + "applications,priority");
@@ -54,15 +53,15 @@ public class DroolStcicJudicialRoleMappingTest extends DroolBase {
         expectedRoleNameWorkTypesMap.put("fee-paid-financial", "hearing_work,priority");
     }
 
-    static void assertCommonRoleAssignmentAttributes(RoleAssignment r, String regionId, String office) {
+    static void assertCommonRoleAssignmentAttributes(RoleAssignment r, String office, List<String> ticketCodes) {
         assertEquals(ActorIdType.IDAM, r.getActorIdType());
         assertEquals(TestDataBuilder.id_2, r.getActorId());
         assertEquals(RoleType.ORGANISATION, r.getRoleType());
         assertEquals(RoleCategory.JUDICIAL, r.getRoleCategory());
-        if (!r.getRoleName().equals("fee-paid-judge")) {
-            assertNull(r.getAttributes().get("bookable"));
-        } else {
+        if (r.getRoleName().equals("fee-paid-judge") && ticketCodes != null && ticketCodes.contains("328")) {
             assertTrue(r.getAttributes().get("bookable").asBoolean());
+        } else {
+            assertNull(r.getAttributes().get("bookable"));
         }
 
         String primaryLocation = null;
@@ -87,13 +86,14 @@ public class DroolStcicJudicialRoleMappingTest extends DroolBase {
         assertNull(r.getAttributes().get("region"));
 
         //work types assertions
-        if (office.equals("ST_CIC Tribunal Member-Fee Paid")
-                && r.getRoleName().equals("fee-paid-tribunal-member")) {
-            expectedRoleNameWorkTypesMap.put("fee-paid-tribunal-member",
-                    "hearing_work,decision_making_work,routine_work,applications,priority");
-        } else if (office.equals("ST_CIC Tribunal Member Lay-Fee Paid")
-                && r.getRoleName().equals("fee-paid-tribunal-member")) {
-            expectedRoleNameWorkTypesMap.put("fee-paid-tribunal-member", "hearing_work,priority");
+        if (r.getRoleName().equals("fee-paid-tribunal-member")) {
+            if (List.of("ST_CIC Tribunal Member Disability-Fee Paid",
+                    "ST_CIC Member of the First-tier Tribunal (sitting in retirement)-Fee Paid").contains(office)) {
+                expectedRoleNameWorkTypesMap.put("fee-paid-tribunal-member", "hearing_work,priority");
+            } else {
+                expectedRoleNameWorkTypesMap.put("fee-paid-tribunal-member",
+                        "hearing_work,decision_making_work,routine_work,applications,priority");
+            }
         }
         String expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
         String actualWorkTypes = null;
@@ -105,11 +105,17 @@ public class DroolStcicJudicialRoleMappingTest extends DroolBase {
 
     @ParameterizedTest
     @CsvSource({
-        "ST_CIC President of Tribunal-Salaried,'senior-judge,judge,case-allocator,task-supervisor,"
+        "ST_CIC President of Tribunal-Salaried,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
         "ST_CIC Principal Judge-Salaried,'leadership-judge,senior-judge,judge,case-allocator,task-supervisor,"
                 + "hmcts-judiciary,specific-access-approver-judiciary'",
-        "ST_CIC Tribunal Judge-Salaried,'judge,case-allocator,task-supervisor,hmcts-judiciary,"
+        "ST_CIC Tribunal Judge-Salaried,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+                + "specific-access-approver-judiciary'",
+        "ST_CIC Judge of the First-tier Tribunal-Salaried,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+                + "specific-access-approver-judiciary'",
+        "ST_CIC Circuit Judge-Salaried,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
+                + "specific-access-approver-judiciary'",
+        "ST_CIC Regional Tribunal Judge-Salaried,'judge,hmcts-judiciary,case-allocator,task-supervisor,"
                 + "specific-access-approver-judiciary'",
         "ST_CIC Tribunal Member Medical-Salaried,'medical,hmcts-judiciary'"
     })
@@ -124,58 +130,77 @@ public class DroolStcicJudicialRoleMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(judicialOfficeHolders.stream().iterator().next().getUserId(),roleAssignments.get(0).getActorId());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        String regionId = allProfiles.iterator().next().getRegionId();
         roleAssignments.forEach(r -> {
             assertEquals("Salaried", r.getAttributes().get("contractType").asText());
-            assertCommonRoleAssignmentAttributes(r, regionId, setOffice);
+            assertCommonRoleAssignmentAttributes(r, setOffice, null);
         });
     }
 
     @ParameterizedTest
     @CsvSource({
         "ST_CIC Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
-        "ST_CIC Tribunal Member-Fee Paid,'fee-paid-tribunal-member'",
-        "ST_CIC Tribunal Member Medical-Fee Paid,'fee-paid-medical'",
-        "ST_CIC Tribunal Member Lay-Fee Paid,'fee-paid-tribunal-member'",
-        "ST_CIC Tribunal Member Disability-Fee Paid,'fee-paid-disability'",
-        "ST_CIC Tribunal Member Financially Qualified-Fee Paid,'fee-paid-financial'"
+        "ST_CIC Judge of the First-tier Tribunal (sitting in retirement)-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Chairman-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Recorder-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Deputy Upper Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Tribunal Member-Fee Paid,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Tribunal Member Lay-Fee Paid,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Advisory Committee Member - Magistrate-Fee Paid,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Magistrate-Fee Paid,'fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Tribunal Member Medical-Fee Paid,'fee-paid-medical,hmcts-judiciary'",
+        "ST_CIC Tribunal Member Optometrist-Fee Paid,'fee-paid-medical,hmcts-judiciary'",
+        "ST_CIC Tribunal Member Disability-Fee Paid,'fee-paid-disability,fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Member of the First-tier Tribunal (sitting in retirement)-Fee Paid,'fee-paid-disability,"
+                + "fee-paid-tribunal-member,hmcts-judiciary'",
+        "ST_CIC Tribunal Member Financially Qualified-Fee Paid,'fee-paid-financial,hmcts-judiciary'"
     })
-    void shouldReturnFeePaidRoles(String setOffice, String expectedRoles) {
-
-        judicialOfficeHolders.forEach(joh -> joh.setOffice(setOffice));
-
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(getFeatureFlags("st_cic_wa_1_0", true));
-
-        //assertion
-        assertFalse(roleAssignments.isEmpty());
-        assertEquals(judicialOfficeHolders.stream().iterator().next().getUserId(),roleAssignments.get(0).getActorId());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
-                containsInAnyOrder(expectedRoles.split(",")));
-        assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        String regionId = allProfiles.iterator().next().getRegionId();
-        roleAssignments.forEach(r -> {
-            assertEquals("Fee-Paid", r.getAttributes().get("contractType").asText());
-            assertCommonRoleAssignmentAttributes(r, regionId, setOffice);
-        });
+    void verifyFeePaidRoles(String setOffice, String expectedRoles) throws IOException {
+        shouldReturnFeePaidRoles(setOffice, expectedRoles, false, "");
     }
 
     @ParameterizedTest
     @CsvSource({
-        "ST_CIC Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary,judge'"
+        "ST_CIC Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary,judge'",
+        "ST_CIC Judge of the First-tier Tribunal (sitting in retirement)-Fee Paid,'fee-paid-judge,"
+                + "hmcts-judiciary,judge'",
+        "ST_CIC Chairman-Fee Paid,'fee-paid-judge,hmcts-judiciary,judge'",
+        "ST_CIC Recorder-Fee Paid,'fee-paid-judge,hmcts-judiciary,judge'",
+        "ST_CIC Deputy Upper Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary,judge'"
     })
-    void shouldReturnFeePaidRolesWithBooking(String setOffice, String expectedRoles) throws IOException {
+    void verifyFeePaidRolesWithBookingAndValidTicketCode(String setOffice, String expectedRoles) throws IOException {
+        shouldReturnFeePaidRoles(setOffice, expectedRoles, true, "328");
+    }
 
-        judicialOfficeHolders.forEach(joh -> joh.setOffice(setOffice));
-        JudicialBooking judicialBooking = TestDataBuilder.buildJudicialBooking();
-        judicialBooking.setUserId(judicialOfficeHolders.stream().findFirst()
-                .orElse(JudicialOfficeHolder.builder().build()).getUserId());
-        judicialBooking.setLocationId("2");
-        judicialBookings = Set.of(judicialBooking);
+    @ParameterizedTest
+    @CsvSource({
+        "ST_CIC Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Judge of the First-tier Tribunal (sitting in retirement)-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Chairman-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Recorder-Fee Paid,'fee-paid-judge,hmcts-judiciary'",
+        "ST_CIC Deputy Upper Tribunal Judge-Fee Paid,'fee-paid-judge,hmcts-judiciary'"
+    })
+    void verifyFeePaidRolesWithBookingAndInvalidTicketCode(String setOffice, String expectedRoles) throws IOException {
+        shouldReturnFeePaidRoles(setOffice, expectedRoles, true, "");
+    }
+
+    void shouldReturnFeePaidRoles(String setOffice, String expectedRoles,
+                                  boolean withBooking, String ticketCode) throws IOException {
+
+        judicialOfficeHolders.forEach(joh -> {
+            joh.setOffice(setOffice);
+            joh.setTicketCodes(List.of(ticketCode));
+        });
+
+        if (withBooking) {
+            JudicialBooking judicialBooking = TestDataBuilder.buildJudicialBooking();
+            judicialBooking.setUserId(judicialOfficeHolders.stream().findFirst()
+                    .orElse(JudicialOfficeHolder.builder().build()).getUserId());
+            judicialBooking.setLocationId("2");
+            judicialBookings = Set.of(judicialBooking);
+        }
 
         //Execute Kie session
         List<RoleAssignment> roleAssignments =
@@ -184,13 +209,16 @@ public class DroolStcicJudicialRoleMappingTest extends DroolBase {
         //assertion
         assertFalse(roleAssignments.isEmpty());
         assertEquals(judicialOfficeHolders.stream().iterator().next().getUserId(),roleAssignments.get(0).getActorId());
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(expectedRoles.split(",")));
         assertEquals(expectedRoles.split(",").length, roleAssignments.size());
-        String regionId = allProfiles.iterator().next().getRegionId();
+        List<String> ticketCodes = judicialOfficeHolders.stream()
+                .flatMap(judicialOfficeHolder -> judicialOfficeHolder.getTicketCodes().stream())
+                .toList();
         roleAssignments.forEach(r -> {
             assertEquals("Fee-Paid", r.getAttributes().get("contractType").asText());
-            assertCommonRoleAssignmentAttributes(r, regionId, setOffice);
+            assertCommonRoleAssignmentAttributes(r, setOffice, ticketCodes);
         });
     }
+
 }
